--- a/style.css
+++ b/style.css
@@ -1,23 +1,50 @@
-body {
-    background-color: grey;
+html {
+    font-size: 10px;
+    background: url(https://screenshots.en.sftcdn.net/en/scrn/69658000/69658896/image-02-686x535.png) bottom center;
+}
+
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+.keys {
+    display: flex;
+    flex: 1;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
 }
 
 .key {
-    margin: 0 auto;
-    border: 4px solid black;
-    border-radius: 5px;
-    display: inline;
+    border: .4rem solid black;
+    border-radius: .5rem;
+    margin: 1rem;
     padding: 1rem .5rem;
     font-size: 1.5rem;
-    transition: all .07s;
-    width: 100%;
+    transition: all .07s ease;
+    width: 10rem;
     text-align: center;
     color: white;
-    text-shadow: 0 0 5px black;
+    background: rgba(0,0,0,0.4);
+    text-shadow: 0 0 5rem black;
 }
 
 .playing {
     transform:scale(1.1);
     border-color: #ffc600;
-    box-shadow: 0 0 10px #ffc600;
+    box-shadow: 0 0 1rem #ffc600;
+}
+
+kbd {
+    display: block;
+    font-size: 4rem;
+}
+
+.sound {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    color: #ffc600;
 }
